<resources>
    <string name="app_name">GermanDictionary</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="asexual">중성</string>
    <string name="save">저장</string>
    <string name="word_kind">품사</string>
    <string name="german">단어</string>
    <string name="meaning">의미</string>
    <string name="verb">동사</string>
    <string name="noun">명사</string>
    <string name="adjective">형용사</string>
    <string name="adverb">부사</string>
    <string name="etc">기타</string>
    <string name="no_category">해당 없음</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
